QtBeef/src/Qt/qevent.bf

using System;
using System.Interop;

namespace Qt6;

// --------------------------------------------------------------
// QInputEvent
// --------------------------------------------------------------
[CRepr]
struct QInputEvent_Ptr
{
	public void* Ptr;
	public this(void* ptr)
	{
		this.Ptr = ptr;
	}
}
extension CQt
{
	[LinkName("QInputEvent_new")]
	public static extern QInputEvent_Ptr QInputEvent_new(QEvent_Type type, void** m_dev);
	[LinkName("QInputEvent_new2")]
	public static extern QInputEvent_Ptr QInputEvent_new2(QEvent_Type type, void** m_dev, void* modifiers);
	[LinkName("QInputEvent_Delete")]
	public static extern void QInputEvent_Delete(QInputEvent_Ptr self);
	[LinkName("QInputEvent_Clone")]
	public static extern void** QInputEvent_Clone(void* self);
	[LinkName("QInputEvent_Device")]
	public static extern void** QInputEvent_Device(void* self);
	[LinkName("QInputEvent_DeviceType")]
	public static extern QInputDevice_DeviceType QInputEvent_DeviceType(void* self);
	[LinkName("QInputEvent_Modifiers")]
	public static extern void* QInputEvent_Modifiers(void* self);
	[LinkName("QInputEvent_SetModifiers")]
	public static extern void QInputEvent_SetModifiers(void* self, void* modifiers);
	[LinkName("QInputEvent_Timestamp")]
	public static extern c_ulonglong QInputEvent_Timestamp(void* self);
	[LinkName("QInputEvent_SetTimestamp")]
	public static extern void QInputEvent_SetTimestamp(void* self, c_ulonglong timestamp);
}
class QInputEvent : IQInputEvent, IQEvent
{
	private QInputEvent_Ptr ptr;
	public void* ObjectPtr => ptr.Ptr;
	public this(QInputEvent_Ptr ptr)
	{
		this.ptr = ptr;
	}
	public this(QEvent_Type type, IQInputDevice m_dev)
	{
		this.ptr = CQt.QInputEvent_new(type, (.)m_dev?.ObjectPtr);
	}
	public this(QEvent_Type type, IQInputDevice m_dev, void* modifiers)
	{
		this.ptr = CQt.QInputEvent_new2(type, (.)m_dev?.ObjectPtr, modifiers);
	}
	public ~this()
	{
		CQt.QInputEvent_Delete(this.ptr);
	}
	public QInputEvent_Ptr Clone()
	{
		return QInputEvent_Ptr(CQt.QInputEvent_Clone((.)this.ptr.Ptr));
	}
	public QInputDevice_Ptr Device()
	{
		return QInputDevice_Ptr(CQt.QInputEvent_Device((.)this.ptr.Ptr));
	}
	public QInputDevice_DeviceType DeviceType()
	{
		return CQt.QInputEvent_DeviceType((.)this.ptr.Ptr);
	}
	public void* Modifiers()
	{
		return CQt.QInputEvent_Modifiers((.)this.ptr.Ptr);
	}
	public void SetModifiers(void* modifiers)
	{
		CQt.QInputEvent_SetModifiers((.)this.ptr.Ptr, modifiers);
	}
	public c_ulonglong Timestamp()
	{
		return CQt.QInputEvent_Timestamp((.)this.ptr.Ptr);
	}
	public void SetTimestamp(c_ulonglong timestamp)
	{
		CQt.QInputEvent_SetTimestamp((.)this.ptr.Ptr, timestamp);
	}
	public QEvent_Type Type()
	{
		return CQt.QEvent_Type((.)this.ptr.Ptr);
	}
	public bool Spontaneous()
	{
		return CQt.QEvent_Spontaneous((.)this.ptr.Ptr);
	}
	public void SetAccepted(bool accepted)
	{
		CQt.QEvent_SetAccepted((.)this.ptr.Ptr, accepted);
	}
	public bool IsAccepted()
	{
		return CQt.QEvent_IsAccepted((.)this.ptr.Ptr);
	}
	public void Accept()
	{
		CQt.QEvent_Accept((.)this.ptr.Ptr);
	}
	public void Ignore()
	{
		CQt.QEvent_Ignore((.)this.ptr.Ptr);
	}
	public bool IsInputEvent()
	{
		return CQt.QEvent_IsInputEvent((.)this.ptr.Ptr);
	}
	public bool IsPointerEvent()
	{
		return CQt.QEvent_IsPointerEvent((.)this.ptr.Ptr);
	}
	public bool IsSinglePointEvent()
	{
		return CQt.QEvent_IsSinglePointEvent((.)this.ptr.Ptr);
	}
	public c_int RegisterEventType()
	{
		return CQt.QEvent_RegisterEventType();
	}
	public c_int RegisterEventType1(c_int hint)
	{
		return CQt.QEvent_RegisterEventType1(hint);
	}
}
interface IQInputEvent : IQtObjectInterface
{
}
// --------------------------------------------------------------
// QPointerEvent
// --------------------------------------------------------------
[CRepr]
struct QPointerEvent_Ptr
{
	public void* Ptr;
	public this(void* ptr)
	{
		this.Ptr = ptr;
	}
}
extension CQt
{
	[LinkName("QPointerEvent_new")]
	public static extern QPointerEvent_Ptr QPointerEvent_new(QEvent_Type type, void** dev);
	[LinkName("QPointerEvent_new2")]
	public static extern QPointerEvent_Ptr QPointerEvent_new2(QEvent_Type type, void** dev, void* modifiers);
	[LinkName("QPointerEvent_new3")]
	public static extern QPointerEvent_Ptr QPointerEvent_new3(QEvent_Type type, void** dev, void* modifiers, void** points);
	[LinkName("QPointerEvent_Delete")]
	public static extern void QPointerEvent_Delete(QPointerEvent_Ptr self);
	[LinkName("QPointerEvent_Clone")]
	public static extern void** QPointerEvent_Clone(void* self);
	[LinkName("QPointerEvent_PointingDevice")]
	public static extern void** QPointerEvent_PointingDevice(void* self);
	[LinkName("QPointerEvent_PointerType")]
	public static extern QPointingDevice_PointerType QPointerEvent_PointerType(void* self);
	[LinkName("QPointerEvent_SetTimestamp")]
	public static extern void QPointerEvent_SetTimestamp(void* self, c_ulonglong timestamp);
	[LinkName("QPointerEvent_PointCount")]
	public static extern void* QPointerEvent_PointCount(void* self);
	[LinkName("QPointerEvent_Point")]
	public static extern void** QPointerEvent_Point(void* self, void* i);
	[LinkName("QPointerEvent_Points")]
	public static extern void** QPointerEvent_Points(void* self);
	[LinkName("QPointerEvent_PointById")]
	public static extern void** QPointerEvent_PointById(void* self, c_int id);
	[LinkName("QPointerEvent_AllPointsGrabbed")]
	public static extern bool QPointerEvent_AllPointsGrabbed(void* self);
	[LinkName("QPointerEvent_IsBeginEvent")]
	public static extern bool QPointerEvent_IsBeginEvent(void* self);
	[LinkName("QPointerEvent_IsUpdateEvent")]
	public static extern bool QPointerEvent_IsUpdateEvent(void* self);
	[LinkName("QPointerEvent_IsEndEvent")]
	public static extern bool QPointerEvent_IsEndEvent(void* self);
	[LinkName("QPointerEvent_AllPointsAccepted")]
	public static extern bool QPointerEvent_AllPointsAccepted(void* self);
	[LinkName("QPointerEvent_SetAccepted")]
	public static extern void QPointerEvent_SetAccepted(void* self, bool accepted);
	[LinkName("QPointerEvent_ExclusiveGrabber")]
	public static extern void** QPointerEvent_ExclusiveGrabber(void* self, void** point);
	[LinkName("QPointerEvent_SetExclusiveGrabber")]
	public static extern void QPointerEvent_SetExclusiveGrabber(void* self, void** point, void** exclusiveGrabber);
	[LinkName("QPointerEvent_ClearPassiveGrabbers")]
	public static extern void QPointerEvent_ClearPassiveGrabbers(void* self, void** point);
	[LinkName("QPointerEvent_AddPassiveGrabber")]
	public static extern bool QPointerEvent_AddPassiveGrabber(void* self, void** point, void** grabber);
	[LinkName("QPointerEvent_RemovePassiveGrabber")]
	public static extern bool QPointerEvent_RemovePassiveGrabber(void* self, void** point, void** grabber);
}
class QPointerEvent : IQPointerEvent, IQInputEvent, IQEvent
{
	private QPointerEvent_Ptr ptr;
	public void* ObjectPtr => ptr.Ptr;
	public this(QPointerEvent_Ptr ptr)
	{
		this.ptr = ptr;
	}
	public this(QEvent_Type type, IQPointingDevice dev)
	{
		this.ptr = CQt.QPointerEvent_new(type, (.)dev?.ObjectPtr);
	}
	public this(QEvent_Type type, IQPointingDevice dev, void* modifiers)
	{
		this.ptr = CQt.QPointerEvent_new2(type, (.)dev?.ObjectPtr, modifiers);
	}
	public this(QEvent_Type type, IQPointingDevice dev, void* modifiers, void** points)
	{
		this.ptr = CQt.QPointerEvent_new3(type, (.)dev?.ObjectPtr, modifiers, points);
	}
	public ~this()
	{
		CQt.QPointerEvent_Delete(this.ptr);
	}
	public QPointerEvent_Ptr Clone()
	{
		return QPointerEvent_Ptr(CQt.QPointerEvent_Clone((.)this.ptr.Ptr));
	}
	public QPointingDevice_Ptr PointingDevice()
	{
		return QPointingDevice_Ptr(CQt.QPointerEvent_PointingDevice((.)this.ptr.Ptr));
	}
	public QPointingDevice_PointerType PointerType()
	{
		return CQt.QPointerEvent_PointerType((.)this.ptr.Ptr);
	}
	public void SetTimestamp(c_ulonglong timestamp)
	{
		CQt.QPointerEvent_SetTimestamp((.)this.ptr.Ptr, timestamp);
	}
	public void* PointCount()
	{
		return CQt.QPointerEvent_PointCount((.)this.ptr.Ptr);
	}
	public QEventPoint_Ptr Point(void* i)
	{
		return QEventPoint_Ptr(CQt.QPointerEvent_Point((.)this.ptr.Ptr, i));
	}
	public void** Points()
	{
		return CQt.QPointerEvent_Points((.)this.ptr.Ptr);
	}
	public QEventPoint_Ptr PointById(c_int id)
	{
		return QEventPoint_Ptr(CQt.QPointerEvent_PointById((.)this.ptr.Ptr, id));
	}
	public bool AllPointsGrabbed()
	{
		return CQt.QPointerEvent_AllPointsGrabbed((.)this.ptr.Ptr);
	}
	public bool IsBeginEvent()
	{
		return CQt.QPointerEvent_IsBeginEvent((.)this.ptr.Ptr);
	}
	public bool IsUpdateEvent()
	{
		return CQt.QPointerEvent_IsUpdateEvent((.)this.ptr.Ptr);
	}
	public bool IsEndEvent()
	{
		return CQt.QPointerEvent_IsEndEvent((.)this.ptr.Ptr);
	}
	public bool AllPointsAccepted()
	{
		return CQt.QPointerEvent_AllPointsAccepted((.)this.ptr.Ptr);
	}
	public void SetAccepted(bool accepted)
	{
		CQt.QPointerEvent_SetAccepted((.)this.ptr.Ptr, accepted);
	}
	public QObject_Ptr ExclusiveGrabber(IQEventPoint point)
	{
		return QObject_Ptr(CQt.QPointerEvent_ExclusiveGrabber((.)this.ptr.Ptr, (.)point?.ObjectPtr));
	}
	public void SetExclusiveGrabber(IQEventPoint point, IQObject exclusiveGrabber)
	{
		CQt.QPointerEvent_SetExclusiveGrabber((.)this.ptr.Ptr, (.)point?.ObjectPtr, (.)exclusiveGrabber?.ObjectPtr);
	}
	public void ClearPassiveGrabbers(IQEventPoint point)
	{
		CQt.QPointerEvent_ClearPassiveGrabbers((.)this.ptr.Ptr, (.)point?.ObjectPtr);
	}
	public bool AddPassiveGrabber(IQEventPoint point, IQObject grabber)
	{
		return CQt.QPointerEvent_AddPassiveGrabber((.)this.ptr.Ptr, (.)point?.ObjectPtr, (.)grabber?.ObjectPtr);
	}
	public bool RemovePassiveGrabber(IQEventPoint point, IQObject grabber)
	{
		return CQt.QPointerEvent_RemovePassiveGrabber((.)this.ptr.Ptr, (.)point?.ObjectPtr, (.)grabber?.ObjectPtr);
	}
	public QInputDevice_Ptr Device()
	{
		return QInputDevice_Ptr(CQt.QInputEvent_Device((.)this.ptr.Ptr));
	}
	public QInputDevice_DeviceType DeviceType()
	{
		return CQt.QInputEvent_DeviceType((.)this.ptr.Ptr);
	}
	public void* Modifiers()
	{
		return CQt.QInputEvent_Modifiers((.)this.ptr.Ptr);
	}
	public void SetModifiers(void* modifiers)
	{
		CQt.QInputEvent_SetModifiers((.)this.ptr.Ptr, modifiers);
	}
	public c_ulonglong Timestamp()
	{
		return CQt.QInputEvent_Timestamp((.)this.ptr.Ptr);
	}
	public QEvent_Type Type()
	{
		return CQt.QEvent_Type((.)this.ptr.Ptr);
	}
	public bool Spontaneous()
	{
		return CQt.QEvent_Spontaneous((.)this.ptr.Ptr);
	}
	public bool IsAccepted()
	{
		return CQt.QEvent_IsAccepted((.)this.ptr.Ptr);
	}
	public void Accept()
	{
		CQt.QEvent_Accept((.)this.ptr.Ptr);
	}
	public void Ignore()
	{
		CQt.QEvent_Ignore((.)this.ptr.Ptr);
	}
	public bool IsInputEvent()
	{
		return CQt.QEvent_IsInputEvent((.)this.ptr.Ptr);
	}
	public bool IsPointerEvent()
	{
		return CQt.QEvent_IsPointerEvent((.)this.ptr.Ptr);
	}
	public bool IsSinglePointEvent()
	{
		return CQt.QEvent_IsSinglePointEvent((.)this.ptr.Ptr);
	}
	public c_int RegisterEventType()
	{
		return CQt.QEvent_RegisterEventType();
	}
	public c_int RegisterEventType1(c_int hint)
	{
		return CQt.QEvent_RegisterEventType1(hint);
	}
}
interface IQPointerEvent : IQtObjectInterface
{
}
// --------------------------------------------------------------
// QSinglePointEvent
// --------------------------------------------------------------
[CRepr]
struct QSinglePointEvent_Ptr
{
	public void* Ptr;
	public this(void* ptr)
	{
		this.Ptr = ptr;
	}
}
